# SFML-Starter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  assetmanager.h  gameengine.cpp  gameengine.h  gamestate.h  introstate.cpp  introstate.h  loadstate.cpp  loadstate.h  main.cpp  menustate.cpp  menustate.h  playstate.cpp  playstate.h  snake.cpp  snake.h
